--- a/app/templates/components/auth-component.hbs
+++ b/app/templates/components/auth-component.hbs
@@ -1,5 +1,5 @@
 {{#if session.isAuthenticated}}
-  <div class="link login" {{action 'invalidateSession'}}><div class="fa fa-user"></div>{{t "common.logout"}}</div>
+  <div class="link login" {{action "invalidateSession"}}><div class="fa fa-user"></div>{{t "common.logout"}}</div>
 {{else}}
   <div class="link login" data-toggle="modal" data-target="#myModal"><div class="fa fa-user"></div>{{t "common.login"}}</div>
 {{/if}}<!-- Button trigger modal -->
@@ -8,11 +8,11 @@
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
-      <form {{action 'authenticate' on='submit'}}>
+      <form {{action "authenticate" on="submit"}}>
       <div class="modal-body"> 
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-          {{input id='identification' placeholder=placeholderLogin value=identification key-down="resetError"}}
-          {{input id='password' placeholder=placeholderPassword type='password' value=password key-down="resetError"}}
+          {{input id="identification" placeholder=placeholderLogin value=identification key-down="resetError"}}
+          {{input id="password" placeholder=placeholderPassword type="password" value=password key-down="resetError"}}
           {{#if errorMessage}}
             <div class="error">{{errorMessage}}</div>
           {{/if}}
